--- a/hugo.toml
+++ b/hugo.toml
@@ -54,7 +54,7 @@ title = "Hugo ʕ•ᴥ•ʔ Bear"
 # file. See [Hugo's Format function docs](https://gohugo.io/functions/format/)
 # for details. An example TOML config that uses [ISO
 # 8601](https://en.wikipedia.org/wiki/ISO_8601) format:
-# dateFormat = "2006-01-02"
+dateFormat = "Jan 2, 2006"
 
 # Configure markup highlighter to match "Bearblog" aesthetics, see
 # https://gohugo.io/configuration/markup/#highlight
