--- a/hugo.toml
+++ b/hugo.toml
@@ -1,14 +1,14 @@
 # Base URL used when generating links to your pages
 # Set to the URL for your site
-baseURL = "https://example.com"
+baseURL = "junrui-liu.github.io"
 
 # The name of this wonderful theme ;-).
-theme = ["hugo-admonitions", "hugo-bearblog"]
+theme = ["hugo-bearblog"]
 
 # Basic metadata configuration for your blog.
 title = "Junrui Liu"
 author = "Junrui Liu"
-copyright = "Copyright © 2025, Junrui Liu."
+copyright = "Copyright © 2026, Junrui Liu."
 languageCode = "en-US"
 
 # Generate a nice robots.txt for SEO
@@ -23,7 +23,7 @@ tags = "/blog/:slug"
 
 [params]
 # The "description" of your website. This is used in the meta data of your generated html.
-# description = "Hugo + Bear = :heart:"
+description = "Junrui Liu's Personal Website"
 
 # The path to your "favicon". This should be a square (at least 32px x 32px) png-file.
 # Hint: It's good practise to also put a "favicon.ico"-file into your "static"-folder.
@@ -33,12 +33,12 @@ favicon = "images/favicon.png"
 # services like Twitter or Slack want to generate a preview of a link to your site.
 # See https://gohugo.io/templates/internal#twitter-cards and
 # https://gohugo.io/templates/internal#open-graph.
-images = ["images/share.png"]
+# images = ["images/share.png"]
 
 # Another "title" :-). This one is used as the site_name on the Hugo's internal
 # opengraph structured data template.
 # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
-title = "Hugo ʕ•ᴥ•ʔ Bear"
+title = "Junrui liu"
 
 # This theme will, by default, inject a made-with-line at the bottom of the page.
 # You can turn it off, but we would really appreciate if you don’t :-).
