--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 # Base URL used when generating links to your pages
 # Set to the URL for your site
-baseURL = "junrui-liu.github.io"
+# baseURL = "junrui-liu.github.io"
 
 # The name of this wonderful theme ;-).
 theme = ["hugo-bearblog"]
@@ -33,7 +33,7 @@ favicon = "images/favicon.png"
 # services like Twitter or Slack want to generate a preview of a link to your site.
 # See https://gohugo.io/templates/internal#twitter-cards and
 # https://gohugo.io/templates/internal#open-graph.
-# images = ["images/share.png"]
+images = ["images/cat_kotatsu_neko.png"]
 
 # Another "title" :-). This one is used as the site_name on the Hugo's internal
 # opengraph structured data template.
