--- a/hugo.toml
+++ b/hugo.toml
@@ -47,7 +47,7 @@ title = "Junrui liu"
 # By default, if you want to read more than one blog post you have to always go
 # back to the /blog page.
 # By enabling this feature each blog post will have at the end a navigator
-enablePostNavigator = true
+# enablePostNavigator = true
 
 # By default, this theme displays dates with a format like "02 Jan, 2006", but
 # you can customize it by setting the `dateFormat` param in your site's config
